# AthleteAPI

./: .env.sample  .flake8  .gitignore  README.md  alembic.ini  project_architecture_schema.drawio  pyproject.toml
.github/workflows/: codeql.yml  flake8_mypy_for_pull_requst.yml  flake8_mypy_for_pull_requst_and_push.yml  test_coverage.yml
app/: main.py
app/core/: config.py  database.py  db_instance.py  exceptions.py
app/models/migrations/: env.py
app/models/migrations/versions/: 058af268e415_initial_migration.py
app/tests/: test_config.py  test_database.py
app/tests/tests_for_utils/: test_decorators.py  test_secret_key.py
app/utils/: decorators.py  memory_analysis.py  secret_key.py  validators.py
src/: main.py
src/core/: settings.py
src/core/models/: __init__.py  base.py  db_helper.py  exercises_model.py
src/exercise/: schemas.py  views.py
