[tool.black]
line-length = 79
exclude = '''
/(
    .venv
)/
'''

[tool.poetry]
name = "athleteapi"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <a.grytsai1987@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
uvicorn = {extras = ["standart"], version = "^0.34.0"}
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
