[tool.black]
line-length = 79

[tool.poetry]
name = "Athleteapi"
version = "0.1.0"
description = ""
authors = ["Alex Grytsai <grytsai.alex@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
